syntax = "proto3";

package v1;

option go_package = "github.com/gitpod-io/gitpod/components/ws-cluster-manager/api/v1";

import "definition/resource.proto";

service ClusterService {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
  rpc PullResources(PullResourcesRequest) returns (PullResourcesResponse) {};
  rpc UpdateResource(UpdateResourceRequest) returns (UpdateResourceResponse) {};
  rpc Notify(NotifyRequest) returns (stream NotifyResponse) {};
}

message HelloRequest {
  string name = 1;
}
message HelloResponse {}

message PullResourcesRequest {
  string state_token = 1;
}
message PullResourcesResponse {
  string state_token = 1;
  repeated Resource resources = 2;
}

message UpdateResourceRequest {
  Resource resource = 1;
}
message UpdateResourceResponse {
  string state_token = 1;
}

message NotifyRequest {}
message NotifyResponse {
  string state_token = 1;
}
